--- a/flexbox/10-styles.css
+++ b/flexbox/10-styles.css
@@ -347,12 +347,26 @@ ul.row {
       ============================= */
   
 .section-hero {
+    position: relative;
+    margin-top: -8.5rem;
+}
+  
+.hero-homepage {
     background-position: 75% 0;
     background-repeat: no-repeat;
     background-size: 90rem auto;
     background-color: #010101;
 }
-  
+
+.section-hero .section-body {
+    padding: 10rem 4rem;
+}
+
+.section-hero .section-category {
+    color: white;
+    text-transform: uppercase;
+}
+
 .section-hero .section-title {
     margin-bottom: 5rem;
 }
