Fix using the variable color-white

--- a/flexbox/10-styles.css
+++ b/flexbox/10-styles.css
@@ -363,7 +363,7 @@ ul.row {
 }
 
 .section-hero .section-category {
-    color: white;
+    color: var(--color-white);
     text-transform: uppercase;
 }
 
