--- a/flexbox/11-styles.css
+++ b/flexbox/11-styles.css
@@ -532,8 +532,7 @@ ul.row {
 }
 
 .hero-article::before {
-    /* content: empty; */
-    content: none;
+    content: '';
     background: rgba(0, 0, 0, 0.8);
     position: absolute;
     top: 0;
